Fixed color contrast issue on game.html

--- a/style.css
+++ b/style.css
@@ -320,7 +320,7 @@
     max-width:400px;
     padding:10px;
     border:solid 10px black;
-    background-color:rgb(61, 60, 60);
+    background-color:white;
     
 }
 
